Add new project: Online Car Rental System

--- a/ticket-booking-backend/src/main/resources/application.properties
+++ b/ticket-booking-backend/src/main/resources/application.properties
@@ -67,7 +67,7 @@ app.api.calls-this-month=0
 # ===============================
 # Using SendGrid Web API for reliable email delivery (100 emails/day free)
 # Set your SendGrid API key below
-sendgrid.api.key=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
+sendgrid.api.key=#enter your api key
 
 # Email service configuration
 app.email.from=sky_bookings@outlook.com
@@ -86,8 +86,8 @@ spring.task.execution.thread-name-prefix=email-async-
 # Razorpay Payment Configuration
 # ===============================
 # Test API keys - replace with your actual test keys from Razorpay dashboard
-razorpay.api.key.id=rzp_test_FsUyP83S9XfJMG
-razorpay.api.key.secret=eHoDWet3DlMeL5oicNzWjGOz
+razorpay.api.key.id=#enter razorpay api id
+razorpay.api.key.secret=enter razorpay api key
 
 # Configure success and cancel URLs (replace with actual frontend URLs)
 razorpay.success.url=http://localhost:3000/payment/success
